# cj2k26

./: CREDITS.txt  Cargo.toml  index.html  index.scss
.cargo/: config.toml
assets/: player.aseprite  sprites.aseprite
src/: anim.rs  bullet.rs  color.rs  enemy.rs  gfx.rs  grid.rs  main.rs  math.rs  player.rs  rng.rs  screen.rs  sfx.rs  sprite.rs  starfield.rs  tilemap.rs
