[package]
name = "cj2k26"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
cpal = "0.18"
env_logger = "0.11"
gilrs = "0.11"
glam = "0.33"
log = "0.4"
pixels = "0.17"
resid-rs = { git = "https://github.com/asrael/resid-rs" }
web-time = "1.1"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
cpal = { version = "0.18", features = ["wasm-bindgen"] }
wasm-bindgen-futures = "0.4"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
