[package]
name = "cj2k26"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/asrael/cj2k26"
edition = "2024"

[dependencies]
aseprite-io = "0.2"
cpal = "0.18"
embedded-graphics = "0.8"
env_logger = "0.11"
gilrs = "0.11"
glam = "0.33"
log = "0.4"
resid-rs = { git = "https://github.com/asrael/resid-rs" }
softbuffer = "0.4"
web-time = "1.1"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
cpal = { version = "0.18", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
